fixes the contrast ratio for hoverable list items in the welcome page new button dropdown (#11106)
* fixes button alignment and missing icons issues with ads welcome page

* removes dead code, registers new Button

* creates one button component and adds proper attributes depending on platform

* Add CodeQL Analysis workflow (#10195)

* Add CodeQL Analysis workflow

* Fix path

* adds return types to functions

* fixes show all extensions command

* updates dropdown color themes

* adjusts colors from color registry

--- a/src/sql/workbench/contrib/welcome/page/browser/welcomePage.css
+++ b/src/sql/workbench/contrib/welcome/page/browser/welcomePage.css
@@ -162,8 +162,8 @@
 	line-height: 1.6em
 }
 
-.ads-homepage .btn-primary {
-	border: 1px solid
+.btn-primary .monaco-button, .btn-secondary .monaco-button {
+	height: 28px;
 }
 
 .ads-homepage .btn-primary:hover {
@@ -402,28 +402,13 @@
 	mask-size: 12px 12px
 }
 
-.ads-homepage .icon-arrow-down {
-	position: relative;
-	height: 20px;
-	width: 18px;
-	display: inline-block
+.ads_homepage .codicon-chevron-right {
+	transform: rotate(90deg);
 }
 
-.ads-homepage .icon-arrow-down:before {
-	position: absolute;
-	font: normal normal normal 16px/1 codicon;
-	text-decoration: none;
-	text-rendering: auto;
-	text-align: center;
-	-webkit-font-smoothing: antialiased;
-	display: inline-block;
-	width: 11px;
-	height: 6px;
-	content: "";
-	transform: rotate(90deg);
-	top: -1px;
-	bottom: 5px;
-	margin: auto
+.ads_homepage .monaco-text-button {
+	min-width: 77px;
+	margin: 10px 0;
 }
 
 .ads-homepage .codicon-chevron-right {
